--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
 		"version": "npm run build",
 		"run-prettier": "prettier --write .",
 		"lint": "eslint . --ext=.ts",
-		"pretest": "npm run lint",
-		"test": "node japaFile.js",
+		"pretest": "npm run lint && tsc --noEmit",
+		"test": "node -r @adonisjs/require-ts/build/register ./japaFile.ts",
 		"clean": "rm -rf build",
 		"compile": "npm run clean && npm run lint && tsc && npm run copy:files",
 		"build": "npm run compile",
@@ -47,8 +47,6 @@
 		"url": "https://github.com/ks-labs/adonis5-audit/issues"
 	},
 	"homepage": "https://github.com/ks-labs/adonis5-audit#readme",
-	"types": "build/adonis-typings/index.d.ts",
-	"typings": "build/adonis-typings/index.d.ts",
 	"files": [
 		"build/adonis-typings",
 		"build/providers",
@@ -71,7 +69,8 @@
 			".ts"
 		]
 	},
-	"main": "build/index.js",
+	"main": "./build/providers/AdonisAuditProvider.js",
+	"types": "./build/adonis-typings/index.d.ts",
 	"adonisjs": {
 		"types": "adonis5-audit",
 		"providers": [
@@ -107,17 +106,23 @@
 		"@adonisjs/events": "^7.1.2"
 	},
 	"devDependencies": {
+		"@adonisjs/auth": "^8.2.3",
 		"@adonisjs/core": "^5.8.4",
 		"@adonisjs/events": "^7.0.1",
 		"@adonisjs/ioc-transformer": "^2.3.2",
 		"@adonisjs/lucid": "^18.1.0",
 		"@adonisjs/mrm-preset": "^5.0.3",
-		"@adonisjs/require-ts": "^2.0.12",
+		"@adonisjs/require-ts": "^2.0.13",
 		"@commitlint/cli": "^16.3.0",
 		"@favoloso/conventional-changelog-emoji": "^0.10.0",
+		"@japa/assert": "^1.3.6",
+		"@japa/expect": "^2.0.1",
+		"@japa/preset-adonis": "^1.2.0",
+		"@japa/runner": "^2.2.2",
+		"@poppinss/dev-utils": "^2.0.3",
 		"@release-it/bumper": "4.0.0",
 		"@types/debug": "^4.1.7",
-		"@types/node": "^14.14.45",
+		"@types/node": "^14.18.36",
 		"@types/ramda": "^0.27.62",
 		"adonis-provider-tester": "^1.2.0",
 		"chai": "^4.3.4",
@@ -139,6 +144,7 @@
 		"reflect-metadata": "^0.1.13",
 		"release-it": "15.3.0",
 		"source-map-support": "^0.5.21",
+		"sqlite3": "^5.1.4",
 		"supertest": "^6.1.6",
 		"ts-mockito": "^2.6.1",
 		"ts-node": "^10.4.0",
