--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
 	"name": "adonis5-audit",
-	"version": "1.0.2",
+	"version": "2.0.0",
 	"description": "Audit provider for AdonisJS 5",
 	"scripts": {
 		"mrm": "mrm --preset=@adonisjs/mrm-preset",
 		"dev": "tsc --watch",
-		"copy:files": "mkdirp ./build/templates && cp -r ./templates/* ./build/templates/",
+		"copy:files": "npx mkdirp ./build/templates && cp -r ./templates/* ./build/templates/",
 		"prepare": "npm run build",
 		"format": "prettier --write .",
 		"version": "npm run build",
@@ -23,6 +23,7 @@
 		"rl": "npm i && npm link",
 		"ri": "npm run release",
 		"rici": "release-it --ci",
+		"changelog": "conventional-changelog -p custom-config -i CHANGELOG.md -s -r 0",
 		"r": "release-it",
 		"r:p": "release-it patch",
 		"r:mi": "release-it minor",
@@ -80,9 +81,14 @@
 			]
 		}
 	},
+	"changelog": {
+		"emojis": true,
+		"authorName": true,
+		"authorEmail": false
+	},
 	"config": {
 		"commitizen": {
-			"path": "cz-customizable"
+			"path": "cz-emoji"
 		}
 	},
 	"np": {
@@ -108,22 +114,24 @@
 		"@adonisjs/mrm-preset": "^5.0.3",
 		"@adonisjs/require-ts": "^2.0.13",
 		"@commitlint/cli": "^16.3.0",
+		"@commitlint/config-conventional": "^13.1.0",
 		"@favoloso/conventional-changelog-emoji": "^0.10.0",
 		"@japa/assert": "^1.3.6",
 		"@japa/expect": "^2.0.1",
 		"@japa/preset-adonis": "^1.2.0",
 		"@japa/runner": "^2.2.2",
 		"@poppinss/dev-utils": "^2.0.3",
-		"@release-it/bumper": "4.0.0",
+		"@release-it/bumper": "^4.0.0",
 		"@types/debug": "^4.1.7",
 		"@types/node": "^14.18.36",
 		"@types/ramda": "^0.27.62",
 		"adonis-provider-tester": "^1.2.0",
 		"chai": "^4.3.4",
-		"commitizen": "^4.2.4",
+		"commitizen": "^4.3.0",
 		"commitlint-config-gitmoji": "^2.2.5",
-		"cz-conventional-changelog": "^3.3.0",
-		"cz-customizable": "^6.9.1",
+		"conventional-changelog-cli": "^2.2.2",
+		"conventional-changelog-cz-emoji-config": "^1.0.1",
+		"cz-emoji": "^1.3.1",
 		"doctoc": "^2.1.0",
 		"dotenv": "^10.0.0",
 		"eslint": "^8.6.0",
@@ -131,6 +139,7 @@
 		"eslint-plugin-adonis": "^2.1.0",
 		"eslint-plugin-prettier": "^4.0.0",
 		"japa": "^4.0.0",
+		"mkdirp": "^3.0.1",
 		"mrm": "^3.0.10",
 		"np": "^7.6.0",
 		"npm-audit-html": "^1.5.0",
@@ -147,43 +156,5 @@
 	},
 	"directories": {
 		"test": "test"
-	},
-	"prettier": {
-		"trailingComma": "es5",
-		"semi": false,
-		"singleQuote": true,
-		"useTabs": false,
-		"quoteProps": "consistent",
-		"bracketSpacing": true,
-		"arrowParens": "always",
-		"printWidth": 100
-	},
-	"release-it": {
-		"git": {
-			"tagName": "v${version}",
-			"commitMessage": "🔖 chore(release): v${version}",
-			"pushArgs": [
-				"--follow-tags",
-				"--force"
-			]
-		},
-		"github": {
-			"release": false,
-			"release is disabled due automated github actions": false
-		},
-		"npm": {
-			"publish": false
-		},
-		"increment": "conventional:@favoloso/emoji",
-		"scripts": {
-			"changelog": "./node_modules/.bin/conventional-changelog -p @favoloso/emoji | tail -n +3",
-			"beforeStage": "./node_modules/.bin/conventional-changelog -p @favoloso/emoji -i CHANGELOG.md -s"
-		},
-		"plugins": {
-			"@release-it/bumper": {}
-		},
-		"hooks": {
-			"after:bump": "npx gitmoji-changelog -y --group-similar-commits && git add CHANGELOG.md"
-		}
 	}
 }
