:sparkles: (auditCustom) include code optimizations for audit custom events
include some code optimizations and refactors for custom events needs and more like update README.md

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -28,5 +28,6 @@
 	"extends": "./node_modules/@adonisjs/mrm-preset/_tsconfig",
 	"files": [
 		"./adonis-typings/index.ts",
+		"src/helpers/resolveAuditModel.ts",
 	]
 }
