--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
 		"version": "npm run build",
 		"run-prettier": "prettier --write .",
 		"lint": "eslint . --ext=.ts",
-		"pretest": "npm run lint && tsc --noEmit",
+		"pretest": "env DEBUG=adonis-audit* && npm run lint && tsc --noEmit",
 		"test": "node -r @adonisjs/require-ts/build/register ./japaFile.ts",
 		"clean": "rm -rf build",
 		"compile": "npm run clean && npm run lint && tsc && npm run copy:files",
